--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ryan Dorman's Quote Generator</title>
+    <title>Ryan's freeCodeCamp Projects</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Caveat" rel="stylesheet">
     <script src="https://use.fontawesome.com/7ab10f6524.js"></script>
@@ -27,7 +27,7 @@
                 <br>using JSONP and the 
                 <br><a href="http://forismatic.com/en/" target="_blank">Forismatic API.</a>
                 <br>
-                <a href="https://github.com/Dormanator/freeCodeCamp/tree/master/projects/quoteGenerator" target="_blank">
+                <a href="https://github.com/Dormanator/freeCodeCamp/blob/master/projects/intermediateProjectSite/js/quoteGen.js" target="_blank">
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
                 </a>
             </div>
@@ -38,7 +38,7 @@
                 <br><a href="https://fcc-weather-api.glitch.me/" target="_blank">freeCodeCamp weather
                 <br>API.</a>
                 <br>
-                <a href="#" target="_blank">
+                <a href="https://github.com/Dormanator/freeCodeCamp/blob/master/projects/intermediateProjectSite/js/locWeather.js" target="_blank">
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
                 </a>
             </div>
