--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -76,7 +76,7 @@
 -->
     <section class="content quote_gen" id="quote_gen_content">
         <!--QUOTE SECTION-->
-        <div class="row quote_container">
+        <div class="row quote-container">
             <div class="col flex-bottom">
                 <!--QUOTE TEXT-->
                 <p id="quote" class="blur_land quote">It is possible to commit no mistakes and still lose. That is not a weakness; that is life.</p>
@@ -86,18 +86,18 @@
         </div>
         <!--BUTTON SECTION-->
         <div class="row" id="btn_container">
-            <div class="col btn_sec">
+            <div class="col btn-sec">
                 <!--RANDOM QUOTE BUTTON-->
-                <button type="button" id="btn_quote" class="main_btn">New Quote</button>
+                <button type="button" id="btn_quote" class="main-btn">New Quote</button>
             </div>
-            <div class="col sml_btn_sec">
+            <div class="col sml-btn-sec">
                 <!--TWEET QUOTE BUTTON-->
                 <a href="#" target="_blank" id="tweet_href">
-                    <div id="btn_tweet" class="btn_tweet sml_btn"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></div>
+                    <div id="btn_tweet" class="btn-tweet sml-btn"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></div>
                 </a>
                 <!--QUOTE SOURCE BUTTON-->
                 <a href="#" target="_blank" id="src_href">
-                    <div id="btn_src" class="btn_src sml_btn"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></div>
+                    <div id="btn_src" class="btn-src sml-btn"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></div>
                 </a>
             </div>  
         </div>
