--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+<!--
+#
+# NAVIGATON TOGGLE CONTENT
+#
+-->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <label for="nav-toggle"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></label>
+
 <!--
 #
 # NAVIGATON MODULE CONTENT
@@ -20,7 +29,6 @@
         <h2><a href="http://ryandorman.tech/" class="name-font" target="_blank">Ryan Dorman's</a></h2>
         <h4><a href="https://www.freecodecamp.org/dormanator" class="fcc-font" target="_blank">freeCodeCamp</a> Projects</h4>
         <ul>
-            <i class="fa fa-free-code-camp fa-5x" aria-hidden="true"></i>
             <li class="nav-item quote_gen" id="quote_gen">Quote Generator</li>
             <div class="nav-info quote_gen">
                 Built with JavaScript 
@@ -42,19 +50,21 @@
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
                 </a>
             </div>
+            <li class="nav-item wiki_view" id="wiki_view">Wikipedia Viewer</li>
+            <div class="nav-info wiki_view">
+                Built with JavaScript 
+                <br>using fetch, JSON, 
+                <br><a href="https://www.mediawiki.org/wiki/API:Main_page" target="_blank">and the Wikimedia API.</a>
+                <br>
+                <a href="https://github.com/Dormanator/freeCodeCamp/blob/master/projects/intermediateProjectSite/js/quoteGen.js" target="_blank">
+                    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                </a>
+            </div>
             <!--
-            <li class="nav-item"><a href="#">Wikipedia Viewer</a></li>
             <li class="nav-item"><a href="#">Twitch API</a></li>
             -->
         </ul>
     </nav>
-<!--
-#
-# NAVIGATON TOGGLE CONTENT
-#
--->
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-    <label for="nav-toggle"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></label>
 
 <!--
 #
@@ -119,6 +129,43 @@
         </div>
     </section>
 
+<!--
+#
+# WIKI VIEWER
+#-->
+    <section class="content wiki_view" id="wiki_view_content" >
+        <div class="row">
+            <div class="col wiki-container">
+                <div id="random_wiki" class="col random-wiki">
+                    <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
+                        <ul class="random-wiki-options" id="rotate-options" data-state="1">
+                            <li>Random Wikipedia Article</li>
+                            <li>New Knowledge to Discover</li>
+                            <li>A Way to Grow Your Brain</li>
+                            <li>New Topics to Discuss</li>
+                            <li>An Interesting Article</li>
+                            <li>New Information to Learn</li>
+                        </ul>
+                    </a>
+                </div>
+                <div id="search_wiki" class="search-container">
+                    <form id="search_form" action="." autocomplete="off">
+                        <label for="search_field" id="search_label">
+                            <i class="fa fa-search search-icon" aria-hidden="true"></i>
+                            <i class="fa fa-times close-results" aria-hidden="true" id="close_results"></i>                        
+                        </label>
+                        <h3 id="warning">something went wrong with Javascript :(</h3>
+                    </form>
+                </div>
+            </div>
+            <div class="col results-container">
+                <ul id="search_results" class="search-results col">
+                        <!-- incoming js appends -->
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <!--JQUERY-->
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -138,6 +185,11 @@
     <!--Loc Weather JS-->
     <script 
     src="js/locWeather.js" 
+    type="text/javascript"></script>
+
+    <!--Wiki Viewer JS-->
+    <script 
+    src="js/wikiViewer.js" 
     type="text/javascript"></script>
 
 </body>
