fixing mobile bugs

--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -17,8 +17,8 @@
 # NAVIGATON TOGGLE CONTENT
 #
 -->
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-    <label for="nav-toggle"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></label>
+    <input type="checkbox" id="nav_toggle" class="nav-toggle" />
+    <label for="nav_toggle" id="menu_label"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></label>
 
 <!--
 #
@@ -138,7 +138,7 @@
             <div class="col wiki-container">
                 <div id="random_wiki" class="col random-wiki">
                     <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
-                        <ul class="random-wiki-options" id="rotate-options" data-state="1">
+                        <ul class="random-wiki-options" id="rotate_options" data-state="1">
                             <li>Random Wikipedia Article</li>
                             <li>New Knowledge to Discover</li>
                             <li>A Way to Grow Your Brain</li>
