--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -137,14 +137,14 @@
         <div class="row">
             <div class="col wiki-container">
                 <div id="random_wiki" class="col random-wiki">
-                    <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">
+                    <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="random_link">
                         <ul class="random-wiki-options" id="rotate_options" data-state="1">
-                            <li>Random Wikipedia Article</li>
+                            <li>A Random Wikipedia Article</li>
                             <li>New Knowledge to Discover</li>
+                            <li>New Information to Learn</li>
                             <li>A Way to Grow Your Brain</li>
                             <li>New Topics to Discuss</li>
                             <li>An Interesting Article</li>
-                            <li>New Information to Learn</li>
                         </ul>
                     </a>
                 </div>
