--- a/projects/twitchAPI/index.html
+++ b/projects/twitchAPI/index.html
@@ -4,11 +4,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Caveat" rel="stylesheet">
+    <script src="https://use.fontawesome.com/7ab10f6524.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Twitch API</title>
 </head>
 <body>
-    <p id="wiki_json">Javascript should replace this</p>
+    <section id="twitch_content" class="content">
+        <div class="row twitch-container">
+            <div class="col screen">
+                <div class="col-50 top-left screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            freeCodeCamp 
+                        </div>
+                        <div class="game-section">
+                        </div>
+                        <div class="status-section">
+                            <div class=""></div>
+                            offline
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom">
+                        <div class="bottom-screen-info">
+                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                        </div>
+                        <div class="bottom-screen-btn">
+                            <a href="">
+                                <i class="fa fa-external-link fa-2x" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50 top-right screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            Other dudez name
+                        </div>
+                        <div class="game-section">
+                            Destiny 2
+                        </div>
+                        <div class="status-section">
+                            <div class="twitch-live"></div>
+                            Live
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom">
+                        <div class="bottom-screen-info">
+                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                        </div>
+                        <div class="bottom-screen-btn">
+                            <a href="">
+                                <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50 bottom-left screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            Uzer 2 cool
+                        </div>
+                        <div class="game-section">
+                            Destiny 2
+                        </div>
+                        <div class="status-section">
+                            <div class="twitch-live"></div>
+                            Live
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom screen-row-bottom-left">
+                        <div class="bottom-screen-info screen-row-bottom-left">
+                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                        </div>
+                        <div class="bottom-screen-btn">
+                            <a href="">
+                                <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50 bottom-right screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            Streamer no lyfe
+                        </div>
+                        <div class="game-section">
+                        </div>
+                        <div class="status-section">
+                            <div class=""></div>
+                            Offline
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom screen-row-bottom-right">
+                        <div class="bottom-screen-info">
+                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                        </div>
+                        <div class="bottom-screen-btn screen-row-bottom-right">
+                            <a href="">
+                                <i class="fa fa-external-link fa-2x" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--<i class="fa fa-twitch" aria-hidden="true"></i> PLACE ON SCREEN BORDER LIKE LOGO-->
+            </div>
+            <div class="col-50 left-stand">
+            </div>
+            <div class="col-50 right-stand">
+            </div>
+            <div class="bottom col">
+            </div>
+        </div>
+    </section>
     <script src="js/twitch.js" type="text/javascript"></script>
 </body>
 </html>
