finalizing twitch.tv project

--- a/projects/twitchAPI/index.html
+++ b/projects/twitchAPI/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Caveat" rel="stylesheet">
     <script src="https://use.fontawesome.com/7ab10f6524.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Twitch API</title>
+    <title>twitch.tv API</title>
 </head>
 <body>
     <section id="twitch_content" class="content">
@@ -16,94 +17,84 @@
                 <div class="col-50 top-left screen-section">
                     <div class="screen-row-top">
                         <div class="name-section">
-                            freeCodeCamp 
+                            Uh oh. Something went wrong with JavaScript <!-- JS text -->
                         </div>
                         <div class="game-section">
+                            <!-- JS text -->
                         </div>
                         <div class="status-section">
-                            <div class=""></div>
-                            offline
+                            <!-- JS html -->
                         </div>
                     </div>
                     <div class="screen-row-bottom">
                         <div class="bottom-screen-info">
-                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                            <!-- JS text -->
                         </div>
                         <div class="bottom-screen-btn">
-                            <a href="">
-                                <i class="fa fa-external-link fa-2x" aria-hidden="true"></i>
-                            </a>
+                            <!-- JS html and link -->
                         </div>
                     </div>
                 </div>
                 <div class="col-50 top-right screen-section">
                     <div class="screen-row-top">
                         <div class="name-section">
-                            Other dudez name
+                            <!-- JS text -->
                         </div>
                         <div class="game-section">
-                            Destiny 2
+                            <!-- JS text -->
                         </div>
                         <div class="status-section">
-                            <div class="twitch-live"></div>
-                            Live
+                            <!-- JS html -->
                         </div>
                     </div>
                     <div class="screen-row-bottom">
                         <div class="bottom-screen-info">
-                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                               <!-- JS text -->
                         </div>
                         <div class="bottom-screen-btn">
-                            <a href="">
-                                <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
-                            </a>
+                            <!-- JS html and link -->
                         </div>
                     </div>
                 </div>
                 <div class="col-50 bottom-left screen-section">
                     <div class="screen-row-top">
                         <div class="name-section">
-                            Uzer 2 cool
+                            <!-- JS text -->
                         </div>
                         <div class="game-section">
-                            Destiny 2
+                            <!-- JS text -->
                         </div>
                         <div class="status-section">
-                            <div class="twitch-live"></div>
-                            Live
+                            <!-- JS html -->
                         </div>
                     </div>
-                    <div class="screen-row-bottom screen-row-bottom-left">
-                        <div class="bottom-screen-info screen-row-bottom-left">
-                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                    <div class="screen-row-bottom bottom-left">
+                        <div class="bottom-screen-info bottom-left">
+                            <!-- JS text -->
                         </div>
                         <div class="bottom-screen-btn">
-                            <a href="">
-                                <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
-                            </a>
+                            <!-- JS html and link -->
                         </div>
                     </div>
                 </div>
                 <div class="col-50 bottom-right screen-section">
                     <div class="screen-row-top">
                         <div class="name-section">
-                            Streamer no lyfe
+                            <!-- JS text -->
                         </div>
                         <div class="game-section">
+                            <!-- JS text -->
                         </div>
                         <div class="status-section">
-                            <div class=""></div>
-                            Offline
+                            <!-- JS html -->
                         </div>
                     </div>
-                    <div class="screen-row-bottom screen-row-bottom-right">
+                    <div class="screen-row-bottom bottom-right">
                         <div class="bottom-screen-info">
-                                We help you learn to code, then practice by building projects for nonprofits. Learn Full-stack JavaScript, build a portfolio, and get a coding job by joining our open source community at https://freecodecamp.com
+                            <!-- JS text -->       
                         </div>
-                        <div class="bottom-screen-btn screen-row-bottom-right">
-                            <a href="">
-                                <i class="fa fa-external-link fa-2x" aria-hidden="true"></i>
-                            </a>
+                        <div class="bottom-screen-btn bottom-right">
+                            <!-- JS html and link -->
                         </div>
                     </div>
                 </div>
