added twitch api project to site

--- a/projects/twitchAPI/index.html
+++ b/projects/twitchAPI/index.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <!--<i class="fa fa-twitch" aria-hidden="true"></i> PLACE ON SCREEN BORDER LIKE LOGO-->
+                <i class="fa fa-twitch fa-lg" aria-hidden="true"></i>
             </div>
             <div class="col-50 left-stand">
             </div>
