--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -60,9 +60,16 @@
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
                 </a>
             </div>
-            <!--
-            <li class="nav-item"><a href="#">Twitch API</a></li>
-            -->
+            <li class="nav-item twitch_tv" id="twitch_tv">twitch.tv API</li>
+            <div class="nav-info twitch_tv">
+                Built with JavaScript 
+                <br>using promises, fetch, 
+                <br>JSON, async, await <a href="https://dev.twitch.tv/" target="_blank">and the twitch.tv API.</a>
+                <br>
+                <a href="https://github.com/Dormanator/freeCodeCamp/blob/master/projects/intermediateProjectSite/js/wikiViewer.js" target="_blank">
+                    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                </a>
+            </div>
         </ul>
     </nav>
 
@@ -166,6 +173,108 @@
         </div>
     </section>
 
+<!--
+#
+# twitch.tv API
+#-->
+    <section class="content twitch_tv" id="twitch_tv_content" >
+        <div class="row twitch-container">
+            <div class="col screen">
+                <div class="col-50 top-left screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            Uh oh. Something went wrong with JavaScript <!-- JS text -->
+                        </div>
+                        <div class="game-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="status-section">
+                            <!-- JS html -->
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom">
+                        <div class="bottom-screen-info">
+                            <!-- JS text -->
+                        </div>
+                        <div class="bottom-screen-btn">
+                            <!-- JS html and link -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50 top-right screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="game-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="status-section">
+                            <!-- JS html -->
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom">
+                        <div class="bottom-screen-info">
+                            <!-- JS text -->
+                        </div>
+                        <div class="bottom-screen-btn">
+                            <!-- JS html and link -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50 bottom-left screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="game-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="status-section">
+                            <!-- JS html -->
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom bottom-left">
+                        <div class="bottom-screen-info bottom-left">
+                            <!-- JS text -->
+                        </div>
+                        <div class="bottom-screen-btn">
+                            <!-- JS html and link -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-50 bottom-right screen-section">
+                    <div class="screen-row-top">
+                        <div class="name-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="game-section">
+                            <!-- JS text -->
+                        </div>
+                        <div class="status-section">
+                            <!-- JS html -->
+                        </div>
+                    </div>
+                    <div class="screen-row-bottom bottom-right">
+                        <div class="bottom-screen-info">
+                            <!-- JS text -->       
+                        </div>
+                        <div class="bottom-screen-btn bottom-right">
+                            <!-- JS html and link -->
+                        </div>
+                    </div>
+                </div>
+                <i class="fa fa-twitch fa-lg" aria-hidden="true"></i>
+            </div>
+            <div class="col-50 left-stand">
+            </div>
+            <div class="col-50 right-stand">
+            </div>
+            <div class="bottom col">
+            </div>
+        </div>
+    </section>
+
     <!--JQUERY-->
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -192,5 +301,9 @@
     src="js/wikiViewer.js" 
     type="text/javascript"></script>
 
+    <!--twitch.tv JS-->
+    <script 
+    src="js/twitch.js" 
+    type="text/javascript"></script>
 </body>
 </html>
