adding control and auto-updating to twitch api call

--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -60,7 +60,7 @@
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
                 </a>
             </div>
-            <li class="nav-item twitch_tv" id="twitch_tv">twitch.tv API</li>
+            <li class="nav-item twitch_tv" id="twitch_tv">twitch TV</li>
             <div class="nav-info twitch_tv">
                 Built with JavaScript 
                 <br>using promises, fetch, 
