qol enhancements to menu and input field

--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -64,7 +64,7 @@
             <div class="nav-info twitch_tv">
                 Built with JavaScript 
                 <br>using promises, fetch, 
-                <br>JSON, async, await <a href="https://dev.twitch.tv/" target="_blank">and the twitch.tv API.</a>
+                <br>JSON, async, await and the <a href="https://dev.twitch.tv/" target="_blank">twitch.tv API.</a>
                 <br>
                 <a href="https://github.com/Dormanator/freeCodeCamp/blob/master/projects/intermediateProjectSite/js/twitch.js" target="_blank">
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
