--- a/projects/intermediateProjectSite/index.html
+++ b/projects/intermediateProjectSite/index.html
@@ -198,6 +198,9 @@
                         </div>
                         <div class="bottom-screen-btn">
                             <!-- JS html and link -->
+                            <a href="#" target="_blank">
+                                <i class="fa fa-external-link fa-2x twitch-link-icon" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -219,6 +222,9 @@
                         </div>
                         <div class="bottom-screen-btn">
                             <!-- JS html and link -->
+                            <a href="#" target="_blank">
+                                <i class="fa fa-external-link fa-2x twitch-link-icon" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -240,6 +246,9 @@
                         </div>
                         <div class="bottom-screen-btn">
                             <!-- JS html and link -->
+                            <a href="#" target="_blank">
+                                <i class="fa fa-external-link fa-2x twitch-link-icon" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -261,6 +270,9 @@
                         </div>
                         <div class="bottom-screen-btn bottom-right">
                             <!-- JS html and link -->
+                            <a href="#" target="_blank">
+                                <i class="fa fa-external-link fa-2x twitch-link-icon" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
